welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:16: error: '(' expected but identifier found.
  if D>=2{
     ^