welcome.lessons.welcome.bat.bool2.LastDigit2.scala.code
def lastDigit(a:Int, b:Int, c:Int):Boolean = {
  var A:Int=a%10
  var B: Int=b%10
  var C: Int=c%10
  var D: Int=0
  
  if (A==B){
    D=D+1
  }
  if (A==C){
    D=D+1
  }
  if (C==B){
    D=D+1
  }
  if D>=2{
    return true
  }
  return false
}